--- a/index.html
+++ b/index.html
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <title>ANIS</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
-    </head>
-    <body style="height: 2000px; background-color: rgb(224, 224, 224);">
-        <header>
-            <a class="logo" href="/"><p class="anislogo">ANIS</p></a>
-            <nav>
-                <ul class="nav__links">
-                    <li><a href="#">General</a></li>
-                    <li><a href="#">Psychotherapy with Robots</a></li>
-                    <li><a href="#">Robots and Social Media</a></li>
-                    <li><a href="#">Robots' Gym</a></li>
-                    <li><a class="noprev" href="#">Hobby</a></li>
-                </ul>
-            </nav>
-            <p class="menu cta">Menu</p>
-        </header>
-        <div id="mobile__menu" class="overlay">
-            <a class="close">&times;</a>
-            <div class="overlay__content">
-              <a class="closegen" href="#">General</a>
-              <a class="closesim" href="#">Simptoms</a>
-              <a class="closerisk" href="#">Risk Factors</a>
-              <a class="closemit" href="#">Mitigation Measures</a>
-              <a class="closeprev" href="#">How To Prevent</a>
+
+<head>
+    <meta charset="utf-8">
+    <title>ANIS</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
+<body style="height: 2000px; background-color: rgb(224, 224, 224);">
+    <header>
+        <a class="logo" href="/"><img class="uplogo" src="assets/img/uphelplogo-removebg-preview.png"></a>
+        <nav>
+            <ul class="nav__links">
+                <li><a href="#">General</a></li>
+                <li><a href="#">Robots and Social Media</a></li>
+                <li><a href="#">Robots' Gym</a></li>
+                <li><a class="noprev" href="#">The Robots' Restaurant</a></li>
+                <li><a href="#">Psychotherapy with Robots</a></li>
+            </ul>
+        </nav>
+        <p class="menu cta">Menu</p>
+    </header>
+    <div id="mobile__menu" class="overlay">
+        <a class="close">&times;</a>
+        <div class="overlay__content">
+            <a class="closegen" href="#">General</a>
+            <a href="#">Psychotherapy with Robots</a>
+            <a href="#">Robots and Social Media</a>
+            <a href="#">Robots' Gym</a>
+            <a class="closeprev" href="#">Hobby</a>
+        </div>
+    </div>
+
+    <section class="section section-bg" id="call-to-action" style="background-image: url(assets/img/robott.png)">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 offset-lg-1">
+                    <div class="cta-content">
+                        <div class="bg"></div>
+                        <h1 class="textwhite text-center">Your Underprogressio Help</h1>
+                        <div class="bg"></div>
+                    </div>
+                </div>
             </div>
         </div>
-        <script type="text/javascript" src="assets/js/mobile.js"></script>
-    </body>
+    </section>
+    <script type="text/javascript" src="assets/js/mobile.js"></script>
+</body>
+
 </html>
