--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ANIS</title>
+    <title>UP Help</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -10,32 +10,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<body style="height: 2000px; background-color: rgb(224, 224, 224);">
-    <header>
+<body style="background-color: rgb(224, 224, 224);">
+    <header style="position: fixed; z-index: 998; width: 100%;">
         <a class="logo" href="/"><img class="uplogo" src="assets/img/uphelplogo-removebg-preview.png"></a>
         <nav>
-            <ul class="nav__links">
-                <li><a href="#">General</a></li>
-                <li><a href="#">Robots and Social Media</a></li>
-                <li><a href="#">Robots' Gym</a></li>
-                <li><a class="noprev" href="#">The Robots' Restaurant</a></li>
-                <li><a href="#">Psychotherapy with Robots</a></li>
+            <ul class="navlinks">
+                <li><a href="#general">General</a></li>
+                <li><a href="#socialmedia">Social Media</a></li>
+                <li><a href="#gym">Gym</a></li>
+                <li><a href="#restaurant">Restaurant</a></li>
+                <li><a href="#psychotherapy">Psychotherapy</a></li>
             </ul>
         </nav>
         <p class="menu cta">Menu</p>
     </header>
     <div id="mobile__menu" class="overlay">
         <a class="close">&times;</a>
-        <div class="overlay__content">
-            <a class="closegen" href="#">General</a>
-            <a href="#">Psychotherapy with Robots</a>
-            <a href="#">Robots and Social Media</a>
-            <a href="#">Robots' Gym</a>
-            <a class="closeprev" href="#">Hobby</a>
+        <div class="overlaycontent">
+            <a class="closegen" href="#general">General</a>
+            <a class="closesm" href="#socialmedia">Social Media</a>
+            <a class="closegym" href="#gym">Gym</a>
+            <a class="closerestaurant" href="#restaurant">Restaurant</a></li>
+            <a class="closepsycho" href="#psychotherapy">Psychotherapy</a>
         </div>
     </div>
 
-    <section class="section section-bg" id="call-to-action" style="background-image: url(assets/img/robott.png)">
+    <section class="section section-bg" id="call-to-action" style="background-image: url(assets/img/robot.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 offset-lg-1">
@@ -48,7 +48,134 @@
             </div>
         </div>
     </section>
+
+    <br>
+    <span id="general"></span>
+
+    <section class="section">
+        <div class="mtgeneral">
+          <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+              <div class="section-heading">
+                <h2 class="generalh2 text-center">General</h2>
+                <br>
+                <p class="generaltext">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Hello, World of Underprogressio Land!</b> We all know that the year of 2703 in the Galaxy of Anis has affected all of us due to Virus X financially, socially, economically and especially emotionally. But don’t worry! UP Help is here to help you to overcome this unfortunate event. How? Our wonderful IT Team designed the smartest robots out of all galaxies to help you and your loved ones in the darkest times when you feel like anxiety and depression puts you down!</p>
+              </div>
+              <br>
+              <br>
+              <hr>
+            </div>
+            </div>  
+        </div>
+      </section>
+
+      <span id="socialmedia"></span>
+
+      <section class="section">
+        <div class="mtsocial">
+          <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+              <div class="section-heading">
+                <h2 class="generalh2 text-center">ROBOTS AND SOCIAL MEDIA</h2>
+                <br>
+                <p class="generaltext">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;People nowadays use social media every day in their lives: at work, at home, even at the bathroom! Social media can be good to keep you updated with everything that happens in the other galaxies, but here’s the twist: it’s the most dangerous activity out of all your events during the day! Why, you might ask? It gives you frustration, anger and every bad emotion that you can think of to your subconscious. And those bad feelings are received and analysed by your brain through a process. By the end of this process, the brain creates a whole new feeling and that can be <b>anxiety</b> or <b>depression</b>. </p>
+                <p class="generaltext">That’s why we introduce you to a brand new kind of robots! Those are the “<b>Social Media Robots</b>”! Their wonderful design alongside their best technological programme make them an amazing addition to your daily routine!</p>
+                <p class="generaltext">Their programme is based on them connecting to your phone and analysing all of your social media pages. Afterwards, they process the information and they store it into their brains. And because of their ingenious minds, they choose only the right posts to pop up on your screen to keep you updated, but also happy as they pick the realistic and optimistic posts.</p>
+            </div>
+              <br>
+              <br>
+              <hr>
+            </div>
+            </div>  
+        </div>
+      </section>
+
+      <span id="gym"></span>
+
+      <section class="section">
+        <div class="mtgym">
+          <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+              <div class="section-heading">
+                <h2 class="generalh2 text-center">ROBOTS’ GYM</h2>
+                <br>
+                <p class="generaltext">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Have you ever heard of the happiness chemical called “<b>endorphin</b>”? It’s also called the “<b>pain killer</b>”. I am telling you this because our UP Help Team designed another type of robots which have their own world called “Robots’ Gym”!</p>
+                <p class="generaltext">Their sport programme is specially designed for people who suffer from anxiety and depression and they help them with special workouts. They ask the humans specific questions and based on their answers, the calculator inside of the robots’ brains tells what type of workout they should be doing during that day or week in order to activate their perfect dose of endorphin in order to make them happy.</p>
+            </div>
+              <br>
+              <br>
+              <hr>
+            </div>
+            </div>  
+        </div>
+      </section>
+
+      <span id="restaurant"></span>
+
+      <section class="section">
+        <div class="restaurant">
+          <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+              <div class="section-heading">
+                <h2 class="generalh2 text-center">THE ROBOTS’ RESTAURANT</h2>
+                <br>
+                <p class="generaltext">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The UP Help Team created a third type of robots and their world is named “<b>The Robots’ Restaurant</b>”. </p>
+                <p class="generaltext">Their mission in our world during these hard times is to activate our dopamine chemical which is another important happiness feeling. And how exactly did our programmers do that? They created a system through the robots’ brains which are telling them what exactly an individual should eat every single day based on their schedule in that specific day in order to give them the perfect amount of dopamine so that they will have a good day everyday.</p>
+            </div>
+              <br>
+              <br>
+              <hr>
+            </div>
+            </div>  
+        </div>
+      </section>
+
+      <span id="psychotherapy"></span>
+
+      <section class="section">
+        <div class="psychotherapy">
+          <div class="row">
+            <div class="col-lg-6 offset-lg-3">
+              <div class="section-heading">
+                <h2 class="generalh2 text-center">PSYCHOTHERAPY ROBOTS</h2>
+                <br>
+                <p class="generaltext">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In the past the antidepressants were a good way of coping with depression, but due to some unfortunate events they’ve been banned PERMANENTLY. Again, The Up Family will save you in the unsafest times! We created the most intelligent robots out of all of them: <b>The Psychotherapy Robots</b>.</p>
+                <p class="generaltext">They are always functioning at full speed in order to keep the humans happy. Their success rate is 100% according to our specialists. Why is that, you may think? They are specially constructed so that they think objective, not subjective like human psychiatrists do. Also, they can hypnotise you during those psychotherapies thanks to their brains with the latest artificial intelligence and our IT specialists mentioned that The Psychotherapy Robots are more effective than the usual antidepressants.</p>
+            </div>
+              <br>
+              <br>
+            </div>
+            </div>  
+        </div>
+      </section>
+
+      <footer class="bg-light text-center text-white">
+        <div class="container p-4 pb-0">
+          <section class="mb-4">
+
+            <a
+              class="btn btn-primary btn-floating m-1"
+              style="background-color: #55acee;"
+              href="https://www.instagram.com/__ddenis__/"
+              role="button"
+              ><i class="fab fa-instagram"></i
+            ></a>
+
+            <a
+              class="btn btn-primary btn-floating m-1"
+              style="background-color: #ff00ff;"
+              href="https://www.instagram.com/vrinciii/"
+              role="button"
+              ><i class="fa fa-instagram"></i
+            ></a>
+        </div>
+      
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">© 2021 Copyright UP Help
+        </div>
+      </footer>
+
     <script type="text/javascript" src="assets/js/mobile.js"></script>
+    <script src="https://kit.fontawesome.com/6edd906466.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
